[package]
name = "catboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.14.8"
gtk-source-sys = "0.10.0"
sourceview = "0.9.0"
clipboard = "0.5.0"
rfd = "0.7.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]
